--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "url": "^0.11.1",
